Use `getLast` now that EP is on 21 (or will be after unknown commit)
RELNOTES=no
PiperOrigin-RevId: 826447287